# git-helper

./: License  ReadMe.md
Source/: .gitignore  CMakeLists.txt  actions.cpp  actions.hpp  git.cpp  git.hpp  interaction.cpp  interaction.hpp  main.cpp  main.hpp  os.hpp  std.cpp  std.hpp  version.rc  windows.cpp  windows.hpp
Source/classes/: Version.h
Source/meta/: version.rc
Source/script/: clear-all.bat  get-libgit2.bat
